--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method=post>
+		<header>Feedback Form</header>
+		<label for="name">Name</label>
+		<input id="name" type="text" minlengh="3" maxlength="50" required>
+		
+		<label for="portfolio">Portfolio</label>
+		<input id="portfolio" type="url" required>
+		
+		<label for="favColor">Favorite Color</label>
+		<input id="favColor" type="Color" required>
+		
+		<label for="likeness">Likeness</label>
+		<input id="likeness" type="Range" min="1" max="100" required>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
