--- a/main.html
+++ b/main.html
@@ -8,10 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form method=post>
+	<form method="post">
 		<header>Feedback Form</header>
+		
 		<label for="name">Name</label>
-		<input id="name" type="text" minlengh="3" maxlength="50" required>
+		<input id="name" type="text" min="3" maxlength="50" required>
 		
 		<label for="portfolio">Portfolio</label>
 		<input id="portfolio" type="url" required>
