--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<header>Feedback Form</header>
 		
 		<label for="name">Name</label>
-		<input id="name" type="text" minlength="3" maxlength="50" required>
+		<input id="name" name="name" type="text" minlength="3" maxlength="50" required>
 		
 		<label for="portfolio">Portfolio</label>
 		<input id="portfolio" type="url" required>
